Add global error handler and username login
Introduce centralized error handling and support login by username or email. Backend: add GlobalExceptionHandler to format validation, runtime and general errors; extend UserRepository with findByFullName and findByEmailOrFullName; AuthService now prevents duplicate full names, assigns first registered user ADMIN role, and allows authentication via email or fullName with manual password check; UserDetailsService maps user role to SimpleGrantedAuthority; minor cleanup in User and AuthController. Frontend: improve auth error handling in auth-container.ts, update auth templates for sign-in/up flow, and add a new Home component UI (HTML/CSS/TS) with userName display, logout logic and localStorage usage.